# RetainAI

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.streamlit/: config.toml
apps/dashboard/streamlit-app/: app.py
apps/dashboard/streamlit-app/.streamlit/: config.toml
apps/dashboard/streamlit-app/assets/: README.md
apps/dashboard/streamlit-app/assets/icons/: README.md
apps/dashboard/streamlit-app/assets/styles/: dashboard.css  tokens.css
apps/dashboard/streamlit-app/components/: cards.py  charts.py  layout.py  tables.py
apps/dashboard/streamlit-app/pages/: 01_executive_overview.py  02_prediction_center.py  03_explainability_explorer.py  04_survival_analytics.py  05_data_dictionary.py
artifacts/explanations/logistic_regression/: metadata.json
artifacts/explanations/random_forest/: metadata.json
artifacts/explanations/xgboost/: metadata.json
artifacts/reports/: classification_report.md
configs/: aws.yaml  data.yaml  paths.yaml  training.yaml
configs/schema/: ibm_hr_attrition.yaml
docs/architecture/: architecture_specification_v0.1.md  dashboard_architecture.md  explainability_architecture.md  survival_analysis_architecture.md
docs/dashboard/: data_contract.md  layout_specification.md  mockup_specification.md  mockup_validation.md  service_contract.md
docs/data/: data.md  dataset_structure.md  kaggle.md  reproducibility.md
docs/eda/: data_quality.md  exploratory_analysis.md  findings.md  missing_data.md
docs/modeling/: classification.md  explainability.md  survival.md
modules/api/: explainability_service.py  overview_service.py  prediction_service.py  survival_service.py
modules/classification/: metrics.py  models.py  preprocessing.py  report.py
modules/connectors/: api.py  athena.py  bedrock.py  factory.py  local.py  s3.py
modules/dashboard/: charts.py  explainability_loader.py  inference.py  prediction_input.py  survival_charts.py  survival_loader.py  validation.py
modules/eda/: attrition.py  correlations.py  missingness.py  profiling.py  quality.py  report.py  visualization.py
modules/explainability/: explainers.py  feature_importance.py  preprocessing.py  report.py  shap_values.py  visualization.py
modules/io/: datasets.py  kaggle.py  storage.py
modules/preprocessing/: cleaning.py  schema.py  splitting.py  validation.py
modules/survival/: coxph.py  kaplan_meier.py  metrics.py  preprocessing.py  report.py  visualization.py
notebooks/: 01_data_understanding.ipynb  02_missing_data_analysis.ipynb  03_data_quality.ipynb  04_exploratory_data_analysis.ipynb  05_survival_analysis.ipynb  06_explainability.ipynb  07_dashboard_validation.ipynb
requirements/: ai.txt  aws.txt  explainability.txt  mlops.txt
services/: compose.yaml
services/api/: .dockerignore  Dockerfile  README.md
services/api/app/: main.py
services/api/app/routers/: explainability.py  overview.py  prediction.py  survival.py
services/api/app/schemas/: common.py  prediction.py
services/dashboard/: .dockerignore  Dockerfile  README.md
src/retainai/core/: paths.py
src/retainai/dashboard/: generate_prediction_sample.py  validate_dashboard_assets.py
src/retainai/data/: download_ibm_hr.py  prepare_dataset.py  validate_dataset.py
src/retainai/eda/: generate_report.py
src/retainai/explainability/: run_explainability.py
src/retainai/survival/: run_survival_analysis.py
src/retainai/training/: train_classification.py
tests/: README.md  conftest.py
tests/behavior/features/: dashboard_foundation.feature  retainai_pipeline.feature
tests/behavior/features/steps/: dashboard_steps.py  retainai_steps.py
tests/unit/: test_classification_modules.py  test_core_paths.py  test_dashboard_chart_constants.py  test_dashboard_chart_functions.py  test_dashboard_contracts.py  test_dashboard_data_dictionary_page.py  test_dashboard_mockup_spec.py  test_dashboard_streamlit_keys.py  test_dashboard_structure.py  test_eda_modules.py  test_explainability_modules.py  test_io_storage.py  test_preprocessing_splitting.py  test_preprocessing_validation.py  test_survival_modules.py
